--- a/index.html
+++ b/index.html
@@ -4,8 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dasharath devops project</title>
-</head>
+</head>=
 <body>
     <h1> Hello world </h1>
+    <h2>This is for the cheking the health of the page </h2>
 </body>
 </html>
